Test Org - Speridian/src/objects/BA_AccumulatorDetails__c.object
<CustomObject>
    <fields>
        <fullName>ba_AccumulatorType__c</fullName>
        <label>Accumulator Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_AmountUnits__c</fullName>
        <label>Amount/Units</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Remaining__c</fullName>
        <formula>(ba_AmountUnits__c - ba_Used__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ba_Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Used__c</fullName>
        <label>Used</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Accumulator Details</label>
    <nameField>
        <displayFormat>A{0000}</displayFormat>
        <label>Accumulator Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accumulator Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>